--- a/words.html
+++ b/words.html
@@ -43,10 +43,12 @@ Thanks again!
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="meta_title">
-The Evolution of Trust
+<!-- The Evolution of Trust -->
+تکامل اعتماد
 </p>
 <p id="meta_desc">
-an interactive guide to the game theory of why &amp; how we trust each other
+<!-- an interactive guide to the game theory of why &amp; how we trust each other -->
+یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا و چگونه ما به یکدیگر اعتماد داریم
 </p>
 <p id="meta_loading">
 loading...
