--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@ Many thanks again!
 <head>
 
 	<!-- TO TRANSLATE: "title", "description" -->
-	<title>The Evolution of Trust</title>
-	<meta name="description" content="an interactive guide to the game theory of why &amp; how we trust each other"/>
+	<title>تکامل اعتماد</title>
+	<meta name="description" content="یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا به یکدیگر اعتماد می‌کنیم"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta itemprop="name" content="The Evolution of Trust">
-	<meta itemprop="description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta itemprop="name" content="تکامل اعتماد">
+	<meta itemprop="description" content="یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا به یکدیگر اعتماد می‌کنیم">
 	<meta itemprop="image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="The Evolution of Trust">
-	<meta name="twitter:description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta name="twitter:title" content="تکامل اعتماد">
+	<meta name="twitter:description" content="یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا به یکدیگر اعتماد می‌کنیم">
 	<meta name="twitter:creator" content="@ncasenmare">
 	<meta name="twitter:image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta property="og:title" content="The Evolution of Trust">
+	<meta property="og:title" content="تکامل اعتماد">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/trust/">
 	<meta property="og:image" content="http://ncase.me/trust/social/thumbnail.png">
-	<meta property="og:description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta property="og:description" content="یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا به یکدیگر اعتماد می‌کنیم">
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/slides.css">
@@ -60,7 +60,7 @@ Many thanks again!
 
 </head>
 <body>
-	<div id="preloader">loading...</div> <!-- TRANSLATE THIS -->
+	<div id="preloader">یک خورده صبر کن ...</div> <!-- TRANSLATE THIS -->
 	<div style="display:none" id="main">
 		<div id="slideshow_container">
 			<div id="slideshow"></div>
@@ -70,14 +70,14 @@ Many thanks again!
 	<div style="display:none" id="footer">
 		<div id="sound" sound="on" class="no-select">
 			<div id="sound_icon"></div>
-			<div id="sound_on">ON</div> <!-- TRANSLATE THIS -->
-			<div id="sound_off">OFF</div> <!-- TRANSLATE THIS -->
+			<div id="sound_on">روشن</div> <!-- TRANSLATE THIS -->
+			<div id="sound_off">خاموش</div> <!-- TRANSLATE THIS -->
 		</div>
 		<div id="select"></div>
 
 		<!-- TRANSLATE "title" & "text". Make sure it's less than 112 characters, for Twitter's sake -->
 		<!-- Also, "link" will be changed later to whatever the link for the translated version will be. -->
-		<sharing title="The Evolution of Trust"
+		<sharing title="تکامل اعتماد"
 				 text="People no longer trust each other. Why? And how can we fix it? An interactive guide to the game theory of trust:"
 				 link="http://ncase.me/trust/"></sharing>
 
