--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Many thanks again!
 		<!-- TRANSLATE "title" & "text". Make sure it's less than 112 characters, for Twitter's sake -->
 		<!-- Also, "link" will be changed later to whatever the link for the translated version will be. -->
 		<sharing title="تکامل اعتماد"
-				 text="People no longer trust each other. Why? And how can we fix it? An interactive guide to the game theory of trust:"
+				 text="چرا آدمها کمتر به هم اعتماد می‌کنند؟ راه چاره چیست؟ راهنمای تعاملی اعتماد در نظریه بازی:"
 				 link="http://ncase.me/trust/"></sharing>
 
 	</div>
