translation of introduction.

--- a/words.html
+++ b/words.html
@@ -48,7 +48,7 @@ Thanks again!
 </p>
 <p id="meta_desc">
 <!-- an interactive guide to the game theory of why &amp; how we trust each other -->
-یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا و چگونه ما به یکدیگر اعتماد داریم
+چرا و چگونه به هم اعتماد می‌کنیم؟ یک راهنمای تعاملی از دیدگاه نظریه بازی
 </p>
 <p id="meta_loading">
 loading...
@@ -75,12 +75,12 @@ EVOLUTION<br>
 playing time: 30 min &#8226; by nicky case, july 2017
 
 <!-- TRANSLATION NOTE: UNCOMMENT THE FOLLOWING & ADD YOUR OWN NAME! -->
-<!--
+
 <br>
-translated by YOUR NAME HERE
+translated by Hamed Seyed-allaei
 &#8226;
 <a href="http://ncase.me/trust/">original English version</a>
--->
+
 
 </p>
 
@@ -96,29 +96,43 @@ PLAY &rarr;
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="intro">
-During World War I, peace broke out.
+در اوج جنگ جهانی اول، صلحی رخ می‌دهند...
 <br><br>
-
+<!--
 It was Christmas 1914 on the Western Front.<br>
 Despite strict orders <i>not</i> to chillax with the enemy, British<br>
 and German soldiers left their trenches, crossed No Man's Land,<br>
 and gathered to bury their dead, exchange gifts, and play games.
 <br><br>
-
+-->
+در کریسمس سال ۱۹۱۴، در جبه غربی (مرز آلمان و فرانسه)، بر خلاف دستورات موکد، سربازان انگلیسی و آلمانی سنگر‌هایشان را ترک می‌کنند و از سرزمین بی صاحب رد می‌شوند و اجساد مردگانشان را دفن می‌کنند، به هم هدیه می‌دهند و به بازی و شادی مشغول می‌شوند. 
+<br><br>
+<!--
 Meanwhile: it's 2017, the West has been at peace for decades, and<br>
 wow, we <i>suck</i> at trust. Surveys show that, over the past forty years,
 fewer and fewer people say they trust each other. So here's our puzzle:
 <br><br>
-
+-->
+اما حالا، با اینکه غرب سالها در صلح و سلامت بوده، از اعتماد خبری نیست. نظر سنجی‌ها نشان می‌دهند که در چهل سال گذشته، آدمها کمتر و کمتر به هم اعتماد می‌کنند. معما این است:
+<br><br>
+<!--
 <b>Why, even in peacetime, do friends become enemies?<br>
 And why, even in wartime, do enemies become friends?</b>
+-->
+چرا در زمان صلح، دوستان دشمنی می‌کنند؟ <br>
+و چرا در زمان جنگ، دشمنان دوست هم می‌شوند؟
 <br><br>
-
+<!--
 I think <b>game theory</b> can help explain our epidemic of distrust –<br>
 and how we can fix it! So, to understand all this...
+-->
+من فکر می‌کنم که نظریه بازی، می‌تواند به ما بگوید که چرا بی‌اعتمادی همه گیر شده است
+و ما چطور می‌توانیم برای آن چاره‌ای پیدا کنیم. برای این را بفهمیم ...
 </p>
 <p id="intro_button">
-...let's play a game. &rarr;
+<!-- ...let's play a game. &rarr; -->
+... بیایید بازی کنیم. 
+&larr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
