--- a/words.html
+++ b/words.html
@@ -51,13 +51,13 @@ Thanks again!
 چرا و چگونه به هم اعتماد می‌کنیم؟ یک راهنمای تعاملی از دیدگاه نظریه بازی
 </p>
 <p id="meta_loading">
-loading...
+یک خورده صبر کن ...
 </p>
 <p id="meta_on">
-ON
+روشن
 </p>
 <p id="meta_off">
-OFF
+خاموش
 </p>
 
 
@@ -66,9 +66,9 @@ OFF
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="title">
-<span style="font-size:0.75em">THE</span><br>
-EVOLUTION<br>
-<span style="font-size:0.75em">OF TRUST</span>
+<!-- span style="font-size:0.75em">THE</span><br -->
+تکامل اعتماد<br>
+<!-- span style="font-size:0.75em">OF TRUST</span -->
 </p>
 <p id="subtitle">
 
