--- a/words.html
+++ b/words.html
@@ -105,7 +105,13 @@ and German soldiers left their trenches, crossed No Man's Land,<br>
 and gathered to bury their dead, exchange gifts, and play games.
 <br><br>
 -->
-در کریسمس سال ۱۹۱۴، در جبه غربی (مرز آلمان و فرانسه)، بر خلاف دستورات موکد، سربازان انگلیسی و آلمانی سنگر‌هایشان را ترک می‌کنند و از سرزمین بی صاحب رد می‌شوند و اجساد مردگانشان را دفن می‌کنند، به هم هدیه می‌دهند و به بازی و شادی مشغول می‌شوند. 
+در کریسمس سال ۱۹۱۴، در جبه غربی (مرز آلمان و فرانسه)، 
+<br>
+بر خلاف دستورات موکد، سربازان انگلیسی و آلمانی سنگر‌هایشان را ترک می‌کنند 
+<br>
+و از سرزمین بی صاحب رد می‌شوند و اجساد مردگانشان را دفن می‌کنند، 
+<br>
+به هم هدیه می‌دهند و به بازی و شادی مشغول می‌شوند. 
 <br><br>
 <!--
 Meanwhile: it's 2017, the West has been at peace for decades, and<br>
