--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Many thanks again!
 
 -->
 <!doctype>
-<html lang="fa", dir="rtl">
+<html lang="fa" dir="rtl">
 <head>
 
 	<!-- TO TRANSLATE: "title", "description" -->
