--- a/words.html
+++ b/words.html
@@ -85,7 +85,7 @@ translated by Hamed Seyed-allaei
 </p>
 
 <p id="loading">
-loading...
+یک خورده صبر کن ...
 </p>
 <p id="loading_done">
 PLAY &rarr;
