--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Many thanks again!
 	<link rel="stylesheet" href="css/balloon.css">
 
 </head>
-<body  lang="fa" dir="rtl">
+<body>
 	<div id="preloader">یک خورده صبر کن ...</div> <!-- TRANSLATE THIS -->
 	<div style="display:none" id="main">
 		<div id="slideshow_container">
