adding lang to intro

--- a/words.html
+++ b/words.html
@@ -95,7 +95,7 @@ PLAY &rarr;
 <!-- - - - - - INTRO! - - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
 
-<p id="intro">
+<p id="intro" lang="fa">
 در اوج جنگ جهانی اول، صلحی رخ می‌دهند...
 <br><br>
 <!--
