removing land dir from html

--- a/words.html
+++ b/words.html
@@ -51,7 +51,7 @@ Thanks again!
 چرا و چگونه به هم اعتماد می‌کنیم؟ یک راهنمای تعاملی از دیدگاه نظریه بازی
 </p>
 <p id="meta_loading">
-یک خورده صبر کن ...
+Loading ...
 </p>
 <p id="meta_on">
 روشن
@@ -85,7 +85,7 @@ translated by Hamed Seyed-allaei
 </p>
 
 <p id="loading">
-یک خورده صبر کن ...
+Loading ...
 </p>
 <p id="loading_done">
 PLAY &rarr;
