adding lang en to play

--- a/words.html
+++ b/words.html
@@ -87,7 +87,7 @@ translated by Hamed Seyed-allaei
 <p id="loading">
 Loading ...
 </p>
-<p id="loading_done">
+<p id="loading_done" lang="en">
 PLAY &rarr;
 </p>
 
