fixed problem with hover.

--- a/words.html
+++ b/words.html
@@ -87,7 +87,7 @@ translated by Hamed Seyed-allaei
 <p id="loading">
 Loading ...
 </p>
-<p id="loading_done" lang="en">
+<p id="loading_done">
 PLAY &rarr;
 </p>
 
@@ -95,7 +95,7 @@ PLAY &rarr;
 <!-- - - - - - INTRO! - - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
 
-<p id="intro" lang="fa">
+<p id="intro">
 در اوج جنگ جهانی اول، صلحی رخ می‌دهند...
 <br><br>
 <!--
