Translated up to iteration.

--- a/words.html
+++ b/words.html
@@ -96,7 +96,7 @@ PLAY &rarr;
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="intro">
-در اوج جنگ جهانی اول، صلحی رخ می‌دهند...
+در اوج جنگ جهانی اول، اتفاق جالبی رخ می‌دهد ...
 <br><br>
 <!--
 It was Christmas 1914 on the Western Front.<br>
@@ -105,11 +105,11 @@ and German soldiers left their trenches, crossed No Man's Land,<br>
 and gathered to bury their dead, exchange gifts, and play games.
 <br><br>
 -->
-در کریسمس سال ۱۹۱۴، در جبه غربی (مرز آلمان و فرانسه)، 
+کریسمس سال ۱۹۱۴، در جبه غربی (مرز آلمان و فرانسه)، 
 <br>
-بر خلاف دستورات موکد، سربازان انگلیسی و آلمانی سنگر‌هایشان را ترک می‌کنند 
+بر خلاف دستورات موکد، سربازان انگلیسی و آلمانی سنگر‌هایشان را ترک می‌کنند، 
 <br>
-و از سرزمین بی صاحب رد می‌شوند و اجساد مردگانشان را دفن می‌کنند، 
+از زمین بی صاحب رد می‌شوند، اجساد مردگانشان را دفن می‌کنند، 
 <br>
 به هم هدیه می‌دهند و به بازی و شادی مشغول می‌شوند. 
 <br><br>
@@ -119,7 +119,11 @@ wow, we <i>suck</i> at trust. Surveys show that, over the past forty years,
 fewer and fewer people say they trust each other. So here's our puzzle:
 <br><br>
 -->
-اما حالا، با اینکه غرب سالها در صلح و سلامت بوده، از اعتماد خبری نیست. نظر سنجی‌ها نشان می‌دهند که در چهل سال گذشته، آدمها کمتر و کمتر به هم اعتماد می‌کنند. معما این است:
+اما حالا، با اینکه غرب سالها در صلح و سلامت بوده، 
+<br>
+از اعتماد خبری نیست. 
+<br>
+نظر سنجی‌ها نشان می‌دهند که در چهل سال گذشته، آدمها کمتر و کمتر به هم اعتماد می‌کنند. معما این است:
 <br><br>
 <!--
 <b>Why, even in peacetime, do friends become enemies?<br>
@@ -138,7 +142,6 @@ and how we can fix it! So, to understand all this...
 <p id="intro_button">
 <!-- ...let's play a game. &rarr; -->
 ... بیایید بازی کنیم. 
-&larr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -146,85 +149,116 @@ and how we can fix it! So, to understand all this...
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="label_you_cooperate">
-you<br>cooperate
+همکاری می‌کنی
 </p>
 
 <p id="label_you_cheat">
-you<br>cheat
+تقلب می‌کنی
 </p>
 
 <p id="label_they_cooperate">
-they<br>cooperate
+همکاری می‌کنند
 </p>
 
 <p id="label_they_cheat">
-they<br>cheat
+تقلب می‌کنند
 </p>
 
 <p id="label_you">
-you<br>↙
+تو<br>↙
 </p>
 <p id="label_them">
-other player<br>↘
+بازیکن دیگر<br>↘
 </p>
 
 <p id="oneoff_0_top">
 
-<b>THE GAME OF TRUST</b>
+<b>بازی اعتماد</b>
 <br>
-You have one choice.
+<!-- You have one choice.
 In front of you is a machine: if you put a coin in the machine,
 the <i>other player</i> gets three coins – and vice versa.
 You both can either choose to COOPERATE (put in coin), or CHEAT (don't put in coin).
+-->
+یک انتخاب داری. 
+در مقابل دستگاهی هستی که اگر در داخلش یک سکه بیاندازی، سه سکه به بازیکن دیگر می‌رسد. اگر بازیکن دیگر یک سکه داخل دستگاه بیاندازد، سه سکه به تو می‌رسد. 
+هر دوی شما می‌توانید انتخاب کنید که همکاری کنید (سکه داخل دستگاه بیاندازید) یا تقلب کنید (سکه‌ای داخل دستگاه نیاندازید). 
 </p>
 
+
 <p id="oneoff_0_btm">
-<b>Let's say the other player cheats, and doesn't put in a coin.</b><br>
+<!-- <b>Let's say the other player cheats, and doesn't put in a coin.</b><br>
 What should you do?
+-->
+اگر بازیکن دیگر سکه‌ای داخل دستگاه نیاندازد، تو چه می‌کنی؟
 </p>
 
 <p id="oneoff_1_cheated">
-Exactly! Why let that moocher mooch off of you?
+<!-- Exactly! Why let that moocher mooch off of you? -->
+همینه! چرا اجازه بدهی یک کلاه بردار کلاهت را بردارد؟
 </p>
 
 <p id="oneoff_1_cooperated">
-Alas, turning the other cheek just gets you slapped!
+<!-- Alas, turning the other cheek just gets you slapped! -->
+ای بابا! رویت را بر می‌گردانی تا به سمت دیگر هم سیلی بزند؟ 
 </p>
 
 <p id="oneoff_1_top">
+<!--
 If you cooperate &amp; they cheat, you lose a coin while they gain three. (score: -1 vs +3)
 However, if you both cheat, neither of you gain or lose anything. (score: 0 vs 0)
 <b>Therefore: you should CHEAT.</b>
+-->
+اگر همکاری کنی اما دیگری تقلب کنند، یک سکه از دست می‌دهی، در حالیکه او سه سکه به دست می‌آورد. (امتیاز: ۱- به ۳+)
+اگر هر دو تقلب کنید، هر دو نه چیزی بدست می‌آورید نه چیزی از دست می‌دهید. (امتیاز: ۰ به ۰)
+بنابراین: باید تقلب کرد.
 </p>
 
 <p id="oneoff_1_btm">
+<!--
 <b>But let's say the other player cooperates, and puts in a coin.</b><br>
 What should you do now?
+-->
+اما اگر دیگری همکاری کند و یک سکه داخل دستگاه بیاندازد، تو چه می‌کنی؟
 </p>
 
 <p id="oneoff_2_cheated">
-Wow, that's mean... and also the correct answer!
+<!--Wow, that's mean... and also the correct answer! -->
+این بدجنسی است، و البته جواب صحیح!
 </p>
 
 <p id="oneoff_2_cooperated">
-Sure, seems like the right thing to do... <b>OR IS IT??</b>
+<!-- Sure, seems like the right thing to do... <b>OR IS IT??</b> -->
+به نظر کار درستی است ... واقعاً؟؟
 </p>
 
 <p id="oneoff_2_top">
+<!--
 Because if you both cooperate, you both give up a coin to gain three. (score: +2 vs +2)
 But if you cheat &amp; they cooperate, you gain three coins at their cost of one. (score: +3 vs -1)
 <b>Therefore: you "should" still CHEAT.</b>
+-->
+برای اینکه اگر هر دو همکاری کنید، هر دوی شما یک سکه از دست می‌دهید تا سه سکه بدست آورید. (امتیاز: ۲+ به ۲+)
+اما اگر تقلب کنی و او همکاری کند، به قیمت از دست دادن یک سکهٔ او، تو سه سکه به دست می‌آوری بدون اینکه چیزی از دست داده باشی. (امتیاز: ۳+ به ۱-)
+بنابراین باید تقلب کنی.
 </p>
 
 <p id="oneoff_2_btm">
+<!--
 And <i>that's</i> our dilemma.
 Trust is nice, but it can let others take advantage of you -- or shoot you as you come unarmed out of a trench.
 Sometimes, distrust <i>is</i> rational!
 But now, what happens if we play this game...
-</p>
+-->
 
+و هیمن معمای غیر قابل حل ما است.
+اعتماد خوب است، اما به دیگران اجازه می‌دهد که از تو سوء استفاده کنند -- یا وقتی که بدون صلاح از سنگر بیرون می‌آیی، به تو شلیک کنند. 
+بعضی وقت‌ها اعتماد نکردن منطقی است!
+اما چه می‌شود اگر ما این بازی را ... 
+</p>
 <p id="oneoff_button_next">
-...more than once? &rarr;
+<!-- ...more than once? &rarr; -->
+... بیشتر از یک بار انجام دهیم؟
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
