--- a/words.html
+++ b/words.html
@@ -266,88 +266,112 @@ But now, what happens if we play this game...
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="iterated_intro_top">
+<!--
 <b>Now, let's play for real.</b>
 You'll be playing against 5 different opponents, each with their own game "strategy".
 With each opponent, you'll play anywhere between 3 to 7 rounds.
 (You won't know in advance when the last round is)
 Can you trust them? Or rather... can they trust <i>you?</i>
+-->
+حالا بیایید واقعاً بازی کنیم. 
+قرار است که بر علیه ۵ رقیب مختلف بازی کنی که هرکدام استراتژی مخصوص خودش را داد. 
+با هر رقیب چیزی بین ۳ تا ۷ دور بازی می‌کنی. 
+(نمی‌دانی که کی دور آخر است)
+می‌توانی اعتماد کنی؟ یا اینکه ... آنها می‌توانند به تو اعتماد کنند؟
+
 </p>
 
 <p id="iterated_intro_btm">
-Pick your first, <i>real</i> move. <b>Choose wisely.</b>
+<!--
+Pick your first, <i>real</i> move. <b>Choose wisely.</b> -->
+حرکت اولت را انتخاب کن. خردمندان انتخاب کن. 
 </p>
 
 <p id="iterated_info_1">
-opponent: [X] of [Y]
+رقیب: [X] of [Y]
 </p>
 </p>
 <p id="iterated_info_2">
-your total score: 
+مجموع امتیاز تو:
 </p>
 
 <p id="iterated_score_start">
-And your total score is...
+و امتاز نهایی تو می‌شود ...
 </p>
 <p id="iterated_score_1">
-which is, wow, actually <i>impressively</i> bad.
+<!-- which is, wow, actually <i>impressively</i> bad.-->
+که به طور خارق العاده‌ای بد است!
 </p>
 <p id="iterated_score_2">
-which, uh, could be worse!
+<!-- which, uh, could be worse! -->
+می‌توانست بدتر از این باشد!
 </p>
 <p id="iterated_score_3">
-which ain't bad!
+<!-- which ain't bad! --> 
+که بدک نیست!
 </p>
 <p id="iterated_score_4">
-which is pretty good!
+<!-- which is pretty good! -->
+که خیلی خوب است!
 </p>
 <p id="iterated_score_5">
-which is <i>perfect!</i> Congrats you have too much time on your hands.
+<!-- which is <i>perfect!</i> Congrats you have too much time on your hands. -->
+که عالی است! تبریک می‌گویم، مثل اینکه وقت آزاد خیلی داری.
 </p>
 <p id="iterated_score_x">
-...i have no idea how you did that.
+<!-- ...i have no idea how you did that. -->
+... هیچ ایده‌ای ندارم که چطور اینکار را کردی. 
 </p>
 <p id="iterated_score_end">
-(the lowest &amp; highest possible scores are 7 and 49, respectively)
+<!-- (the lowest &amp; highest possible scores are 7 and 49, respectively) -->
+بیشترین و کمترین امتیاز ممکن، به ترتیب ۷ و ۴۹ هستند. 
 </p>
 
 <p id="who_were">
-So who were these strange characters you just played against?
+<!-- So who were these strange characters you just played against? -->
+خوب، حالا اینهایی که در برابرشان بازی کردی کی بودند؟
 </p>
 
 <p id="character_tft">
-<b>COPYCAT:</b>
-Hello! I start with Cooperate, and afterwards, I just copy whatever you did in the last round. Meow
+<b>میمون صفت:</b>
+<-- Hello! I start with Cooperate, and afterwards, I just copy whatever you did in the last round. Meow -->
+سلام! من با همکاری شروع می‌کنم، بعد از آن هرکاری که تو بکنی، در دور بعد از آن تقلید می‌کنم. 
 </p>
 
 <p id="character_all_d">
-<b>ALWAYS CHEAT:</b>
-<i>the strong shall eat the weak</i>
+<b>همیشه متقلب:</b>
+<i>ضعیف خوراک قوی می‌شود.</i>
 </p>
 
 <p id="character_all_c">
-<b>ALWAYS COOPERATE:</b>
-Let's be best friends! &lt;3
+<b>معصوم:</b>
+بیا دوست باشیم! &lt;3
 </p>
 
 <p id="character_grudge">
-<b>GRUDGER:</b>
-Listen, pardner. I'll start cooperatin', and keep cooperatin',
-but if y'all ever cheat me, I'LL CHEAT YOU BACK 'TIL THE END OF TARNATION.
+<b>کینه‌ای:</b>
+<!-- Listen, pardner. I'll start cooperatin', and keep cooperatin',
+but if y'all ever cheat me, I'LL CHEAT YOU BACK 'TIL THE END OF TARNATION. -->
+هی رفیق، خوب گوش بده، من با همکاری شروع می‌کنم، و به همکاری خودم ادامه می‌دهم، اما اگر حتی یک دفعه به خودت اجازه بدی که تقلب کنی، تا قیام قیامت منم تقلب می‌کنم.
 </p>
 
 <p id="character_prober">
-<b>DETECTIVE:</b>
-First: I analyze you. I start: Cooperate, Cheat, Cooperate, Cooperate.
+<b>کاراگاه:</b>
+<!-- First: I analyze you. I start: Cooperate, Cheat, Cooperate, Cooperate.
 If you cheat back, I'll act like <span class="tft">Copycat</span>.
 If you never cheat back, I'll act like <span class="all_d">Always Cheat</span>, to exploit you.
-Elementary, my dear Watson.
+Elementary, my dear Watson. -->
+من اول تو را تحلیل می‌کنم. شروع من اینطوری است: همکاری، تقلب، همکاری، همکاری. اگر تقلب کنی، میمون صفت می‌شوم. اما اگر اصلا تقلب نکنی، مثل همیشه متقلب ازت سوء استفاده می‌کنم. به همین سادگی!
 </p>
 
 <p id="characters_teaser">
-Now, what if these characters were to play...
+<!-- Now, what if these characters were to play... -->
+حالا چه می‌شود اگر این بازیگرها ...
 </p>
 <p id="characters_button">
-...against each other? &rarr;
+<!-- ...against each other? -->
+... در برابر هم بازی کنند؟
+&rarr;
 </p>
 
 
