--- a/words.html
+++ b/words.html
@@ -182,7 +182,7 @@ You both can either choose to COOPERATE (put in coin), or CHEAT (don't put in co
 -->
 یک انتخاب داری. 
 در مقابل دستگاهی هستی که اگر در داخلش یک سکه بیاندازی، سه سکه به بازیکن دیگر می‌رسد. اگر بازیکن دیگر یک سکه داخل دستگاه بیاندازد، سه سکه به تو می‌رسد. 
-هر دوی شما می‌توانید انتخاب کنید که همکاری کنید (سکه داخل دستگاه بیاندازید) یا تقلب کنید (سکه‌ای داخل دستگاه نیاندازید). 
+هر دو می‌توانید انتخاب کنید که همکاری کنید (سکه داخل دستگاه بیاندازید) یا تقلب کنید (سکه‌ای داخل دستگاه نیاندازید). 
 </p>
 
 
@@ -1220,51 +1220,51 @@ Randomly cheats or cooperates with 50-50 chance
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="label_cooperate">
-cooperate
+همکاری
 </p>
 
 <p id="label_cheat">
-cheat
+تقلب
 </p>
 
 <p id="label_play">
-play
+بازی
 </p>
 
 <p id="label_start">
-START
+شروع
 </p>
 
 <p id="label_stop">
-STOP
+ایست
 </p>
 
 <p id="label_step">
-step
+یک گام
 </p>
 
 <p id="label_reset">
-reset
+تنظیم مجدد
 </p>
 
 <p id="label_population">
-population
+جمعیت
 </p>
 
 <p id="label_payoffs">
-payoffs
+نتیجه نهایی
 </p>
 
 <p id="label_rules">
-rules
+قوانین
 </p>
 
 <p id="label_next">
-next &rarr;
+بعدی &rarr;
 </p>
 
 <p id="label_continue">
-continue
+ادامه
 </p>
 
 
