--- a/words.html
+++ b/words.html
@@ -728,39 +728,68 @@ a taste of their own medicine. -->
 وارث زمین هستند!
 </p>
 <p id="evo_9_all_c">
-So, although your bet was off -- the nice-but-naive <span class="all_c">Always Cooperators</span>
+<!-- So, although your bet was off -- the nice-but-naive <span class="all_c">Always Cooperators</span>
 were doomed from the start -- in the end, a <i>smart</i> form of niceness prevailed,
 and the <span class="all_d">Always Cheaters</span> were squashed.
+-->
+هرچند که شرط را باختی و 
+<span class="all_c">معصومین</span>
+خوب اما ساده‌ دل همان اول حذف شدند، اما در پایان خوبی زیرکانه بر 
+
+<span class="all_d">همیشه متقلب‌‌ها</span>
+پیروز شد.
 </p>
 <p id="evo_9_all_d">
-So, in the short run you were right - <span class="all_d">Always Cheat</span> won the first few rounds,
-but in the end, its exploitativeness was its downfall.
+<!-- So, in the short run you were right - <span class="all_d">Always Cheat</span> won the first few rounds,
+but in the end, its exploitativeness was its downfall. -->
+
+در کوتاه مدت حق با تو بود و 
+<span class="all_d">همیشه متقلب</span> 
+چند دور اول سر بلند بود. اما در انتها، سوء استفاده‌چی بودن به زمین کوبیدشان.
+
 </p>
 <p id="evo_9_tft">
-So, in the long run, you were right - <span class="tft">Copycat</span> wins!
+<!-- So, in the long run, you were right - <span class="tft">Copycat</span> wins!
 <span class="all_d">Always Cheat</span> may have won in the short run,
-but its exploitativeness was its downfall.
+but its exploitativeness was its downfall. -->
+
+در بلند مدت حق با تو بود و 
+<span class="tft">میمون مقلد</span> 
+برنده شد!
+<span class="all_d">همیشه متقلب</span> چند دور اول را خوب آمد,
+اما در انتها، سوء استفاده چی بودن به زمین کوبدشان.
 </p>
 <p id="evo_9_end">
-This reminds me of a quote:
+<!-- This reminds me of a quote:
 <br><br>
 <i>"We are punished by our sins, not for them."</i><br>
-~ Elbert Hubbard
+~ Elbert Hubbard -->
+
+
+این مرا یاد گفته‌ای از البرت هابارت می‌اندازد:
+<br><br>
+<i>
+«ما با گناهانمان عذاب می‌شویم، نه به خاطر آنها»
+</i><br>
+
 </p>
 <p id="evo_9_btn">
-(oh, and by the way...)
+(و به هر حال ...)
 </p>
 
 <p id="evo_10">
-(...this result is similar even if we put
-<span class="grudge">Grudger</span> &amp; <span class="prober">Detective</span> back in:)
+(...نتیجه همان است اگر 
+<span class="grudge">Grudger</span>
+و 
+<span class="prober">Detective</span> 
+هم به مسابقه اضافه بشوند.
 </p>
 
 <p id="evo_autoplay">
-start the evolution process!
+شروع فرایند تکامل!
 </p>
 <p id="evo_autoplay_stop">
-stop the evolution process
+توقف روند تکامل!
 </p>
 
 <p id="evo_10_followup">
