--- a/words.html
+++ b/words.html
@@ -1345,29 +1345,35 @@ random
 </p>
 
 <p id="forgot_whos_who">
-(forgot who's who? hover buttons to see descriptions of each character!)
+(فراموش کردی که کی به کی است؟ موشواره را روی هر دکمه ببر تا خلاصه‌ای از استراتژی مربوطه را ببینی!)
 </p>
 <p id="who_tft">
-Starts with Cooperate. Then, it simply repeats whatever YOU did in the last round.
+با همکاری آغاز می‌کند، و بعد از آن هر کاری که در دور قبل کرده باشی را تکرار می‌کند. 
+<!-- Starts with Cooperate. Then, it simply repeats whatever YOU did in the last round. -->
 </p>
 <p id="who_all_d">
-Always cheats.
+همیشه تقلب می‌کند.
 </p>
 <p id="who_all_c">
-Always cooperates.
+همیشه همکاری می‌کند.
+<!-- Always cooperates.-->
 </p>
 <p id="who_grudge">
-Starts with Cooperate, and keeps cooperating until you cheat it even once.
+با همکاری شروع می‌کند، و به همکاریش ادامه می‌دهد تا اینکه یکبار تقلب کنی. بعد از آن همیشه تقلب می‌کند. 
+<!-- Starts with Cooperate, and keeps cooperating until you cheat it even once.
 Afterwards, it always plays Cheat.
+-->
 </p>
 <p id="who_prober">
-Starts with: Cooperate, Cheat, Cooperate, Cooperate.
+در ابتدا به این ترتیب بازی می‌کند: همکاری، تقلب، همکاری، همکاری. بعد از آن، اگر با تقلب انتقام گرفته باشی، مثل میمون مقلد بازی می‌کند. وگر نه، مثل همیشه متقلب بازی می‌کند.
+<!-- Starts with: Cooperate, Cheat, Cooperate, Cooperate.
 Afterwards, if you ever retaliate with a Cheat, it plays like a Copycat.
 Otherwise, it plays like an Always Cheat.
+-->
 </p>
 <p id="who_tf2t">
-Starts with Cooperate.
-Only retaliates with a Cheat if you cheated it TWICE in a row.
+با همکاری آغاز می‌کند. تنها وقتی با تقلب تلافی می‌کند که دوبار پشت هم تقلب کرده‌باشی.
+<!-- Only retaliates with a Cheat if you cheated it TWICE in a row. -->
 </p>
 <p id="who_pavlov">
 Starts with Cooperate.
@@ -1375,7 +1381,7 @@ Then, if you cooperated in last round, it repeats its last move (even if it was 
 But if you cheated in last round, it switches its last move (even if it was an accident).
 </p>
 <p id="who_random">
-Randomly cheats or cooperates with 50-50 chance
+با احتمال برابر به صورت تصادفی همکاری یا تقلب می‌کند.
 </p>
 
 
