--- a/words.html
+++ b/words.html
@@ -793,35 +793,68 @@ but its exploitativeness was its downfall. -->
 </p>
 
 <p id="evo_10_followup">
+<!--
 (Note: sometimes, a few <span class="grudge">Grudgers</span> may stick around,
 because when all players except <span class="grudge">Grudger</span> &amp; <span class="tft">Copycat</span> 
-are eliminated, the two tie.)
+are eliminated, the two tie.) -->
+(یادداشت: بعضی وقتها، چندتایی 
+<span class="grudge">کینه‌ای</span>
+ممکن است باقی بمانند، برای اینکه وقتی همه به جز 
+<span class="grudge">‌‌کینه‌ای‌ها</span> 
+و
+<span class="tft">میمون‌های مقلد</span> 
+از بین بروند، این دوتا با هم مساوی می‌کنند.
 <br><br>
-So, it seems the math of game theory is telling us something:
+<!-- So, it seems the math of game theory is telling us something:
 that <span class="tft">Copycat's</span> philosophy,
 "Do unto others as you would have them do unto you", may be not just a 
 <i>moral</i> truth, but also a <i>mathematical</i> truth.
 However...
+-->
+به نظر می‌رسد که نظریه بازی درسی برای ما دارد:
+«با دیگران همانطور رفتار کن که دوست داری با تو رفتار کنند»، این نه نتها یک حقیقت اخلاقی است، بلکه یک حقیقت ریاضی هم هست. 
+
 </p>
 <p id="evo_10_btn">
-...there's a problem: &rarr;
+<!-- ...there's a problem:  -->
+... مشکلی وجود دارد:
+&larr;
 </p>
 
 <p id="evo_11">
-Look around. The world's full of total jerkwads.
+<!-- Look around. The world's full of total jerkwads. -->
+به اطرافت نگاه کن، دنیا پر از آدمهای احمق است.
 <br><br>
+<!-- 
 If <span class="tft">Copycat</span> is the strategy in this repeated game of trust that's so powerful --
 that even soldiers in World War I trenches independently "evolved" a similar strategy, called "live and let live" -- 
 why, then, are there so many un-trusting, un-trustworthy people?
 What's causing our epidemic of un-trust?
+-->
+اگر در یک بازی مکرر استراتژی 
+<span class="tft">میمون مقلد</span>
+اینقدر موثر و موفق است، به طوریکه حتی در جنگ جهانی اول سنگرها به طور مستقل به استراتژی مشابه «زندگی کن و بگذار زندگی کنند» رسیدند،
+پس چرا اینقدر آدمهای بی اعتماد و غیر قابل اطمینان داریم؟
+چه چیزی بی اعتمادی را فراگیر کرده است؟
+
 <br><br>
-A clue's in that sentence itself. "In <i>this</i> repeated game of trust."
+<!-- A clue's in that sentence itself. "In <i>this</i> repeated game of trust."
 So far we've only talked about change in the players:
 what about <i>a change in the game?</i>
-What could lead to...
+What could lead to... -->
+
+یک سر نخ در خود این جمله است، «در این بازی مکرر اعتماد.»
+تا حالا فقط درباره تغییرات بازیکن‌‌ها صحبت کردیم،
+چرا درباره تغییرات خود بازی صبحت نکنیم؟
+که می‌تواند ما را هدایت کند به سمت ...
+
 </p>
 <p id="evo_11_btn">
-...the evolution of <i>distrust?</i>
+<!-- ...the evolution of <i>distrust?</i> -->
+... تکامل
+<i>
+ بی‌اعتمادی
+</i>
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -1145,36 +1178,49 @@ what we learnt today! &rarr;
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="conclusion_0">
-Game theory has shown us the three things we need for the evolution of trust:
+<!-- Game theory has shown us the three things we need for the evolution of trust: -->
+نظریه بازی نشان می‌دهد که برای شکل گرفتن اعتماد سه چیز لازم داریم:
 </p>
 <p id="conclusion_1_a">
-1. REPEAT INTERACTIONS
+<!-- 1. REPEAT INTERACTIONS -->
+۱- تعاملات مکرر
 </p>
 <p id="conclusion_1_a2">
-Trust keeps a relationship going,
+<!-- Trust keeps a relationship going,
 but you need the knowledge of possible future repeat interactions <i>before</i> trust can evolve.
+-->
+اعتماد روابط را پا برجا نگه می‌دارد،
+اما قبل از اینکه اعتماد به وجود آید، شما باید از تعاملات تکراری ممکن در آینده مطلع شوید.
 </p>
 <p id="conclusion_2_a">
-2. POSSIBLE WIN-WINS
+<!-- 2. POSSIBLE WIN-WINS -->
+۲- امکان برد-برد
 </p>
 <p id="conclusion_2_a2">
-You must be playing a non-zero-sum game,
+<!-- You must be playing a non-zero-sum game,
 a game where it's at least possible that <i>both</i> players can be better off -- a win-win.
+-->
+باید یک بازی با مجموع غیر صفر باشد، یک بازی که امکانش باشد که هر دو بازیکن بتوانند به یک وضیعیت مطلوب دست یابند -- یک برد-برد.
 </p>
 <p id="conclusion_3_a">
-3. LOW MISCOMMUNICATION
+<!-- 3. LOW MISCOMMUNICATION -->
+۳- سوء تفاهم کم
 </p>
 <p id="conclusion_3_a2">
-If the level of miscommunication is <i>too</i> high, trust breaks down.
-But when there's a little bit of miscommunication, it pays to be <i>more</i> forgiving.
+<!-- If the level of miscommunication is <i>too</i> high, trust breaks down.
+But when there's a little bit of miscommunication, it pays to be <i>more</i> forgiving. -->
+اگر مقدار سوء تفاهمات زیاد باشد، اعتماد از بین می‌رود. اما اگر تنها مقدار کمی سوء تفاهم وجود داشته باشد، بخشنده‌تر بودن چاره کار است. 
 </p>
 <p id="conclusion_4">
-Of course, real-world trust is affected by much more than this.
+<!-- Of course, real-world trust is affected by much more than this.
 There's reputation, shared values, contracts, cultural markers, blah blah blah.
-And let's not forget...
+And let's not forget... -->
+البته در دنیای واقعی اعتماد از عوامل بیشتر تأثیر می‌گیرد، مثل شهرت، ارزش‌های مشترک، قرارداد، مشخصات فرهنگی و غیره و غیره. و بیایید فراموش نکنیم ...
 </p>
 <p id="conclusion_btn">
-...the <i>biggest</i> lesson. &rarr;
+<!-- ...the <i>biggest</i> lesson. -->
+... بزرگ‌ترین درس را.
+&rarr;
 </p>
 
 <p id="outro_1">
@@ -1289,25 +1335,25 @@ cooperator
 </span>
 </p>
 
-<p id="label_grudge">Grudger</p>
+<p id="label_grudge">کینه‌ای</p>
 <p id="label_short_grudge">
-grudger
+کینه‌ای
 </p>
 <p id="icon_grudge">
 <span class="grudge">
 	<span class="icon"></span>
-	<span class="icon_label">Grudger</span>
+	<span class="icon_label">کینه‌ای</span>
 </span>
 </p>
 
-<p id="label_prober">Detective</p>
+<p id="label_prober">کاراگاه</p>
 <p id="label_short_prober">
-detective
+کاراگاه
 </p>
 <p id="icon_prober">
 <span class="prober">
 	<span class="icon"></span>
-	<span class="icon_label">Detective</span>
+	<span class="icon_label">کاراگاه</span>
 </span>
 </p>
 
@@ -1322,25 +1368,25 @@ copykitten
 </span>
 </p>
 
-<p id="label_pavlov">Simpleton</p>
+<p id="label_pavlov">ساده</p>
 <p id="label_short_pavlov">
-simpleton
+ساده
 </p>
 <p id="icon_pavlov">
 <span class="pavlov">
 	<span class="icon"></span>
-	<span class="icon_label">Simpleton</span>
+	<span class="icon_label">ساده</span>
 </span>
 </p>
 
-<p id="label_random">Random</p>
+<p id="label_random">تصادفی</p>
 <p id="label_short_random">
-random
+تصادفی
 </p>
 <p id="icon_random">
 <span class="random">
 	<span class="icon"></span>
-	<span class="icon_label">Random</span>
+	<span class="icon_label">تصادفی</span>
 </span>
 </p>
 
@@ -1376,9 +1422,14 @@ Otherwise, it plays like an Always Cheat.
 <!-- Only retaliates with a Cheat if you cheated it TWICE in a row. -->
 </p>
 <p id="who_pavlov">
-Starts with Cooperate.
+<!-- Starts with Cooperate.
 Then, if you cooperated in last round, it repeats its last move (even if it was an accident).
 But if you cheated in last round, it switches its last move (even if it was an accident).
+-->
+
+با همکاری آغاز می‌کند. اگر در دور قبل همکاری کرده باشی، عملش در دور قبل را تکرار می‌کند (حتی اگر تصادف بوده باشد).
+اما اگر در دور قبل تقلب کرده باشی، برعکس عملش در دور قبل را انجام می‌دهد (حتی اگر تصادف بوده باشد). 
+
 </p>
 <p id="who_random">
 با احتمال برابر به صورت تصادفی همکاری یا تقلب می‌کند.
